syntax = "proto3";
package seguepb;

message CmdDriveData {
	uint32 		speed 				= 1;
}
